--- a/dags/import_soccer_data_to_pg/pipeline_config.yaml
+++ b/dags/import_soccer_data_to_pg/pipeline_config.yaml
@@ -1,6 +1,13 @@
 soccer_teams_ids:
   barcelona: 529
   real_madrid: 541
+  valencia: 532
+  atletico_madrid: 530
 
+soccer_positions:
+ - Goalkeeper
+ - Defender
+ - Midfielder
+ - Attacker
 
 endpoint: https://v3.football.api-sports.io/players/squads
